--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -144,14 +144,14 @@ pander::pandoc.table(create_windowSummaryTable(), caption = '(\\#tab:totalwindow
 ```{r tdTop1000, fig.cap = '(ref:tdTop1000)',echo = FALSE}
 four_plot("td","Tajima's D")
 ```
-
+<!--
 - neg gave super pop clusters
 - pos gave super pop clusters
 - both split the AMR into 2
 - number of windows shared by POL with others was X
 - number of windows shared EP/WP was X
 - number of unique windows was X for CIM, NZM, SAM, TON
-
+-->
 The clustering of the individual populations for 1000 most extreme values from each of the negative and positive tails of the Tajima's D distribution both showed the East/West split in the Polynesians (Figure \@ref(fig:tdTop1000)). But also showed that the Polynesian populations were most similar to each other. The negative tail has the Polynesian cluster most closely related to the \gls{afr} super population, whereas, the positive tail has the Polynesian cluster closest to the \gls{eas} cluster. 
 
 The main groupings also are of the populations that were designated as the same super population. Although the \gls{amr} super population in both tails has been split into two.
@@ -225,12 +225,12 @@ The Eastern Polynesian populations had a total of `r create_sums('fld_pos') %>% 
 ```{r flfTop1000, fig.cap = '(ref:flfTop1000)'}
 four_plot("flf","Fu and Li's F")
 ```
-
+<!--
 - pos clustered super populations together, split AMR
 - pos looks like there is a reasonable number of windows shared between pops (5188)
 - neg looks pretty sparse 17044
-
-Clustering on the Fu and Li's F (Figure \@ref(fig:flfTop1000)) had `r create_windowSummaryTable() %>% filter(stat == 'flf_pos') %>% .[['total_windows']]` windows in the positive tail (Figure \ref(fig:flfTop1000) B and D) and `r create_windowSummaryTable() %>% filter(stat == 'flf_neg') %>% .[['total_windows']]` windows in the negative tail (Figure \ref(fog:flfTop1000) A and C). The mean number of unique windows per population was XXX in the positive tail, compared with XXX in the negative tail. Clustering on the windows from the positive tail put the super populations into their own groups, but also split the \gls{amr} populations into 2 separate groups. The Polynesian populations were also sub grouped as an East/West split. Clustering on the negative tail windows grouped the majority of the individual populations together into their super populations. The Polyesians populations were grouped togther as an East Polynesian group and the Samoan population, however the Tongan population was least similar to the other populations with `r  round(prop_unique('flf_neg') %>% filter(pop == "POL_TON") %>% .[['prop']] * 100, 2)`% of windows being unique, compared to a mean of `r  round(prop_unique('flf_neg')  %>% summarise(mean(prop)) * 100, 2)`%. 
+-->
+Clustering on the Fu and Li's F (Figure \@ref(fig:flfTop1000)) had `r create_windowSummaryTable() %>% filter(stat == 'flf_pos') %>% .[['total_windows']]` windows in the positive tail (Figure \@ref(fig:flfTop1000) B and D) and `r create_windowSummaryTable() %>% filter(stat == 'flf_neg') %>% .[['total_windows']]` windows in the negative tail (Figure \@ref(flf:flfTop1000) A and C). The mean number of unique windows per population was XXX in the positive tail, compared with XXX in the negative tail. Clustering on the windows from the positive tail put the super populations into their own groups, but also split the \gls{amr} populations into 2 separate groups. The Polynesian populations were also sub grouped as an East/West split. Clustering on the negative tail windows grouped the majority of the individual populations together into their super populations. The Polyesians populations were grouped togther as an East Polynesian group and the Samoan population, however the Tongan population was least similar to the other populations with `r  round(prop_unique('flf_neg') %>% filter(pop == "POL_TON") %>% .[['prop']] * 100, 2)`% of windows being unique, compared to a mean of `r  round(prop_unique('flf_neg')  %>% summarise(mean(prop)) * 100, 2)`%. 
 
 
 negative
@@ -268,18 +268,25 @@ The Eastern Polynesian populations had `r create_sums('ze_pos') %>% filter(POL_C
 
 #### Random draws
 ```{r}
-td_random <- readRDS('~/data/NZ_coreExome_1kgp/30kbWindow_intra/td_random-28-6-2017.RDS')
-bind_rows(td_random) %>% group_by(super) %>% summarise(min = min(max_prop), mean = mean(max_prop), sd = sd(max_prop), max = max(max_prop), complete_prop = sum(if_else(max_prop == 1, 1, 0))/NROW(.))
+td_random <- readRDS('~/data/NZ_coreExome_1kgp/30kbWindow_intra/td_random-7-7-2017.RDS')
+bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$super_prop})) %>% group_by(super) %>% group_by(super) %>% summarise(min = min(max_prop), mean = mean(max_prop), sd = sd(max_prop), max = max(max_prop), complete_prop = sum(if_else(max_prop == 1, 1, 0))/NROW(.))
 ```
+
+```{r, eval = FALSE}
+# remove 0 because they aren't actually a cluster
+bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop %>% data.frame()%>% mutate(clust = row.names(.))})) %>% select(-clust) %>% gather("pop","prop") %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean(prop))
+```
+
 
 <!-- why does the Eur never produce a max prop of 1?-->
 
 To assess the likelihood of obtaining the super population clusters by chance, 1000 iterations of random resampling of 1000 windows per population was undertaken and then clustered. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have 6 groups. Then a mean proportion across all iterations is reported.
 
-```{r}
-bind_rows(lapply(td_random, function(x){ x %>% spread('super', 'max_prop')})) %>% filter(POL >= 2/4, EUR >= 3/6, EAS >= 3/5, AFR >= 3/6, SAS >= 3/5) %>% arrange(POL)
+```{r, eval = FALSE}
+bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop %>% data.frame()%>% mutate(clust = row.names(.), iter = x)})) 
+#bind_rows(lapply(td_random, function(x){ x %>% spread('super', 'max_prop')})) %>% filter(POL >= 2/4, EUR >= 3/6, EAS >= 3/5, AFR >= 3/6, SAS >= 3/5) %>% arrange(POL)
 
-bind_rows(lapply(td_random, function(x){ x %>% spread('super', 'max_prop')})) %>% mutate(rn = as.numeric(rownames(.)), exp_prop = rowSums(.)/6) %>% filter(EUR > .5) %>% arrange(exp_prop)
+#bind_rows(lapply(td_random, function(x){ x %>% spread('super', 'max_prop')})) %>% mutate(rn = as.numeric(rownames(.)), exp_prop = rowSums(.)/6) %>% filter(EUR > .5) %>% arrange(exp_prop)
 ```
 
 
@@ -292,7 +299,7 @@ Clustering on the proportion of shared regions for both \gls{ihs} (Figure \@ref(
 
 1. iHS
 
-(ref:ihsclust) _\gls{ihs} Clustering_ Clustering based on proportion of \gls{ihs} regions shared between populations
+(ref:ihsclust) _\gls{ihs} Clustering_ A. Dendrogram from hierachical clustering based on proportion of \gls{ihs} regions shared between populations. B. Heatmap showing the proportion of \gls{ihs} regions shared.
 
 ```{r, fig.cap='(ref:ihsclust)', echo = FALSE}
 ihs_dendro_plot()
@@ -302,7 +309,7 @@ ihs_dendro_plot()
 
 2. nSL
 
-(ref:nslclust) _\gls{nsl} Clustering_ Clustering of \gls{nsl} based on proportion of regions shared between populations.
+(ref:nslclust) _\gls{nsl} Clustering_ A. Dendrogram from hierachical clustering based on proportion of \gls{nsl} regions shared between populations. B. Heatmap showing the proportion of \gls{nsl} regions shared.
 
 ```{r, fig.cap='(ref:nslclust)', echo = FALSE}
 nsl_dendro_plot()
@@ -321,6 +328,10 @@ Hierarchical clustering using chromosome wide F~ST~ (Figure \@ref(fig:wholechrfs
 
 ### stats based on gene lists
 <!-- might be a good idea to use a grid to put multiple plots into one -->
+```{r}
+load('~/data/gwas_catalog/diseaseGR-26-6-2017.RData')
+```
+
 
 The actual values for the windows that intersected the associated gene windows were used to create the distance matrix
 
@@ -331,32 +342,54 @@ The actual values for the windows that intersected the associated gene windows w
 
 #### urate/gout
 
-There were XXX genes that had an association with urate or gout at a genome-wide significance. This mapped to XXX windows for each of the frequency based selection test statistics.
 
+There were `r length(unique(urate_goutGR$SYMBOL))` genes that had an association with urate or gout at a genome-wide significance. This mapped to XXX windows for each of the frequency based selection test statistics. Zeng's _E_ and Fay and Wu's _H_ clustered each super population into their own group and each cluster was exclusive to that super population. Both Tajima's _D_ and Fu and Li's _F_ grouped most of the super populations correctly and nearly all clusters had good exclusivity for a single super population. Fu and Li's _D_ did not cluster the super populations well. Both Fu and Li's _D_ and _H_ grouped the \gls{ton} into a mini \gls{eas} group with \gls{chb} and \gls{jpt}. With the exception of Fu and Li's _D_, the clustering for the other selection test statistics gave an East/West Polynesian population sub group within the Polyensian group.
+
+`r lower_sig_stats %>% filter(SYMBOL %in% unique(urate_goutGR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the urate and gout associated genes had evidence from at least one selection statistic of possible selection. There were 5 genes; _BCAS3_, _IGF1R_, _PRKAG2_, _RREB1_, and _SLC2A9_, that had at least one statistic in all of the Polynesian populations.
+<!--`r lower_sig_stats %>% filter(SYMBOL %in% unique(urate_goutGR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% .[['SYMBOL']]` -->
+
+<!--
 - Td gave the super populations, good exclusivity of clusters,ep/wp split
 - fwh gave perfect super populations and perfect exclusivity. ep/wp split
 - fld not great, sam most disimilar, nzm-gbr, ton-cim-chb-jpt
 - flf got most of the super populations. not bad for exclusivity, cim-nzm-sam + ton-chb-jpt as a big cluster. clm/pur in the middle of the eur cluster - spanish sub cluster?
 - ze perfect super populations, perfect exclusivity
+-->
 
-#### BMI
 
-The GWAS catalog had XXX genes associated Obesity, this was represented by XXX windows.
+
+#### Obesity
+
+The GWAS catalog had `r length(unique(obesity_GR$SYMBOL))` genes associated Obesity, this was represented by XXX windows.
 
 - td excellent groupings, mxl/pel on their own and clm/pur with eur. exclusivity was also pretty much perfect. ep/wp split
 - fwh near perfect, get 3/4 amr being clustered with the eur group. ep/wp split
-- fld
+- fld nzm-mxl. eas, afr grouped. eur, amr and sas inter mixed somewhat. cim-sam-ton
+- flf nice super populations, eas-pol, eur-2amr, mxl/pel
+- ze good super populations, amr-eur and nearly sas, pol-eas with ep/wp split. pretty good exclusivity.
+
 
 #### T2D
 
-- td ep/wp split
-- fwh ep/wp split
-- fld
-- flf
-- ze
+- td ep/wp split, pol as outlier. pretty good clustering and exclusivity
+- fwh ep/wp split, pol-eas as outlier, not bad for exclusivity, clustering was good
+- fld nzm-pel. 3/4 pol as outlier group. not too bad for exclusivity
+- flf pol-eas, ep/wp. pretty good exclusivity and clusters that are pretty close to the super populations
+- ze good exclusivity and good clustering. pol-eas, ep/wp split. amr(clm/pur)-eur
 <!--
 results from other diseases that are late onset and see if they produce the same patterns
 -->
+
+#### Metabolic Syndrome
+
+- td
+- fwh
+- fld
+- flf
+- ze
+
+number of significant
+
 
 ## Discussion and Conclusions
 
